add: Area of a Circle

--- a/project/project.cabal
+++ b/project/project.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      AreaOfaCircle
       ExtremelyBasic
       HelloWorld
   other-modules:
