--- a/project/project.cabal
+++ b/project/project.cabal
@@ -28,6 +28,7 @@ library
       AreaOfaCircle
       ExtremelyBasic
       HelloWorld
+      SimpleSum
   other-modules:
       Paths_project
   hs-source-dirs:
