add: simple product

--- a/project/project.cabal
+++ b/project/project.cabal
@@ -28,6 +28,7 @@ library
       AreaOfaCircle
       ExtremelyBasic
       HelloWorld
+      SimpleProduct
       SimpleSum
   other-modules:
       Paths_project
