update: rename project to beecrownd && add: Average 2

--- a/beecrowd/project.cabal
+++ b/beecrowd/project.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       AreaOfaCircle
       Average1
+      Average2
       ExtremelyBasic
       HelloWorld
       SimpleProduct
