--- a/beecrowd/project.cabal
+++ b/beecrowd/project.cabal
@@ -28,6 +28,7 @@ library
       AreaOfaCircle
       Average1
       Average2
+      Difference
       ExtremelyBasic
       HelloWorld
       SimpleProduct
