--- a/beecrowd/project.cabal
+++ b/beecrowd/project.cabal
@@ -31,6 +31,7 @@ library
       Difference
       ExtremelyBasic
       HelloWorld
+      Salary
       SimpleProduct
       SimpleSum
   other-modules:
