--- a/beecrowd/project.cabal
+++ b/beecrowd/project.cabal
@@ -32,6 +32,7 @@ library
       ExtremelyBasic
       HelloWorld
       Salary
+      SalaryWithBonus
       SimpleProduct
       SimpleSum
   other-modules:
