add: Simple Calculate

--- a/beecrowd/project.cabal
+++ b/beecrowd/project.cabal
@@ -33,6 +33,7 @@ library
       HelloWorld
       Salary
       SalaryWithBonus
+      SimpleCalculate
       SimpleProduct
       SimpleSum
   other-modules:
