--- a/beecrowd/project.cabal
+++ b/beecrowd/project.cabal
@@ -29,6 +29,7 @@ library
       AreaOfaCircle
       Average1
       Average2
+      Consumption
       Difference
       ExtremelyBasic
       HelloWorld
